[package]
name = "jack_compiler"
version = "0.1.0"
authors = ["Evan Schwartz <3262610+emschwartz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
utf8-chars = "1.0.0"
num_enum = "0.5.1"
regex = "1.4.5"